# PRJ3

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  readme.md
.diagrams/: AC_diagram.puml  STM_overordnet.puml  UC_diagram.puml
.source/asioServer/: CMakeLists.txt
.source/asioServer/TCP/: TcpConnection.h  TcpServer.cpp  TcpServer.h
.source/asioServer/include/: ReaderHandler.h
.source/asioServer/src/: ReaderHandler.cpp
.source/client/: CMakeLists.txt
client_rpi/pn532-lib/rpi_tcptest/: rpi_read_uid.cpp
source/: CMakeLists.txt
source/asioServer/: CMakeLists.txt  serverTester.py  serverTesterFiles.py
source/asioServer/TCP/: PayloadEncoder.hpp  TcpConnection.cpp  TcpConnection.h  TcpConnection.hpp  TcpServer.cpp  TcpServer.h  TcpServer.hpp
source/asioServer/include/: ReaderHandler.h  ReaderHandler.hpp  csv.cpp  csv.hpp
source/asioServer/logger/: csv.cpp  csv.hpp
source/asioServer/logger/logs/doorLogs/: Log_Bagindgang.csv  Log_Hovedindgang.csv
source/asioServer/logger/logs/systemLogs/: Log_2025_11_21.csv  Log_2025_11_27.csv
source/asioServer/logger/logs/userLogs/: Log_JohnDoe.csv  Log_john_doe.csv
source/asioServer/src/: ReaderHandler.cpp  main.cpp
source/cli/: CMakeLists.txt  cli  cli.cpp  cli.h  main.cpp
source/cli/pn532-lib/rpi_tcptest/: Buzzer.cpp  ReedSwitch.cpp  pn532_wrapper.h  rpi_client.cpp  rpi_client.h  rpi_get_uid.cpp
source/client/: CMakeLists.txt
source/client/pn532-lib/: CMakeLists.txt
source/client/pn532-lib/rpi_tcptest/: Buzzer.cpp  Buzzer.h  Led.cpp  Led.h  ReedSwitch.cpp  ReedSwitch.h  pn532_wrapper.cpp  rpi_client.cpp  rpi_client.h  rpi_get_uid  rpi_get_uid.cpp  rpi_read_uid.cpp
